--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">OneLineFiction</string>
+    <string-array name="option">
+        <item>[메뉴]</item>
+        <item>수정</item>
+        <item>삭제</item>
+    </string-array>
 </resources>
